# septicaengine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  buildAndRun.bat  buildAndRunNinja.bat  cleanBuild.bat  main.cpp
include/: UIEngine.hpp  carte.hpp  ddgnetwork.hpp  ddgtypes.hpp  includes.hpp  jucator.hpp  pachet.hpp  septica.hpp
include/DDGEngine/: GameState.hpp  MainMenu.hpp  Options.hpp  UIButton.hpp  UIElement.hpp
include/SepticaGame/: carte.hpp  ddgtypes.hpp  jucator.hpp  septica.hpp
src/: carte.cpp  jucator.cpp  main.cpp  mainMenu.cpp  septica.cpp
src/DDGEngine/: CMakeLists.txt  GameState.cpp  MainMenu.cpp  Options.cpp  UIButton.cpp
src/SepticaGame/: CMakeLists.txt  pachet.cpp
